# rust-slab-allocator

./: Authors.md  LICENSE  README.md  projet.bundle
allocator/: Cargo.toml
allocator/fuzz/: Cargo.toml
allocator/fuzz/fuzz_targets/: fuzz_target_1.rs
allocator/src/: allocator.rs  cache.rs  freelist.rs  lib.rs  page_provider.rs  slab.rs
allocator/tests/: basic.rs
writeup/: slub.md
