[package]
name = "allocator"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = []
# feature optionnelle
testing = []
# Active std pour les builds dev/tests (crate reste no_std par défaut)
std = []

# Provider de test basé sur std::alloc + Vec (pour Miri / tests d'intégration)
test-provider = ["std"]
